Added athuntication and worked on styling the sign in & sign up page

--- a/src/Components/Main-Section/Sec.scss
+++ b/src/Components/Main-Section/Sec.scss
@@ -4,6 +4,7 @@ $PrimeColor: #ad1a10;
    
     width: 100vw;
     // position: absolute;
+  
 
 
     .Testimonal{
@@ -11,7 +12,9 @@ $PrimeColor: #ad1a10;
         width: 90vw;
         // border: 1px solid red;
         height: fit-content;
-        // padding: 0 50px;
+        padding: 0 30px;
+       
+     
 
         .single-Testi{
           
