--- a/src/Components/Sign-up/signUp.scss
+++ b/src/Components/Sign-up/signUp.scss
@@ -1,5 +1,14 @@
 
 .signUp-Container{
+    margin: 0 auto;
+ 
+    width: 50%;  
     color: white;
+    background-color: #121212;
+
+ 
+    span{
+        margin-bottom: 5px;
+    }
  
 }
