--- a/src/Components/Buttons/Buttons.scss
+++ b/src/Components/Buttons/Buttons.scss
@@ -2,7 +2,8 @@
 
 .btns{
     font-size: 1.2rem;
-    width: 120px;
+    min-width: 120px;
+    
      padding: 6px 10px;
      border: none;
      cursor: pointer;
