--- a/src/Components/Sign-in/Sign-in.scss
+++ b/src/Components/Sign-in/Sign-in.scss
@@ -1,18 +1,62 @@
 .signIn{
-  width: 50%;  
-  margin: 0 auto;
+  width: 90%;  
+ 
+  margin: 5em auto 0 auto;
   color: white;
-  
+  display: flex;
+  border: 1px solid white;
   background-color: #121212;
+  position: relative;
+  border: none;
 
     p{
     
         border-bottom: 1px solid grey;
 
-      padding-bottom: 15px;  
+     
     }
 
   h4{
     margin-bottom: 25px;
+    margin-top: 0;
+  }
+  h2{
+    margin: 0;
+  }
+
+  .google-singIN{
+ 
+    padding: 5px;
+  }
+
+
+  .signIN-Conent{
+    width: 50%;
+    // border: 1px solid green;
+
+    .Avatar-con{
+      margin: 0 auto;
+    width: 50%;
+    max-width: 120px;
+    
+    .Avatar{ 
+      width: 100%;
+      height: 100%;
+    } 
+    }
+
+
+  }
+
+
+  .signIN-Banner{
+    order: -1;
+    width: 50%;
+    border-right: 2px solid #4673bd;
+
+    .Icon{
+      width: 100%;
+      height: 100%;
+    }
   }
 }
