--- a/src/Components/Sign-up/signUp.scss
+++ b/src/Components/Sign-up/signUp.scss
@@ -2,13 +2,64 @@
 .signUp-Container{
     margin: 0 auto;
  
-    width: 50%;  
+   width: 90%;
     color: white;
     background-color: #121212;
+    
+    margin: 5em auto 0 auto;
+
+    display: flex;
 
  
     span{
         margin-bottom: 5px;
     }
- 
+
+    .signUp-content{
+        width: 50%;
+
+     
+
+        h2,h4{
+            margin: 0;
+
+        }
+        h4{
+            margin-bottom: 15px;
+        }
+
+
+
+    
+    .Avatar-con{
+        width: 50%;
+        margin: 0 auto;
+      
+
+        .Avatar{
+            width: 100%;
+            height: 100%;
+            max-width: 130px;
+        }
+    }
+
+    
+
+
+
+    }
+    
+    .signUp-card{
+        width: 50%;
+        order: -1;
+        border-right:1px solid orange;
+
+
+    
+    .logo{
+        width: 100%;
+        height: 100%;
+    }
+
+    }
 }
