Worked little bit on styling the navbar

--- a/src/Components/Main-Section/Main.scss
+++ b/src/Components/Main-Section/Main.scss
@@ -31,7 +31,8 @@
     }
 
     video{
-        opacity: 0.888;
+        // opacity: 0.888;
+        opacity: 0;
        
         width: 100vw;
         height: 70vh;
