--- a/src/Components/Main-Section/Sec.scss
+++ b/src/Components/Main-Section/Sec.scss
@@ -12,7 +12,7 @@ $PrimeColor: #ad1a10;
         width: 90vw;
         // border: 1px solid red;
         height: fit-content;
-        padding: 0 30px;
+        // padding: 0 30px;
        
      
 
