--- a/src/Components/Sign-in/Sign-in.scss
+++ b/src/Components/Sign-in/Sign-in.scss
@@ -9,6 +9,8 @@
   position: relative;
   border: none;
 
+  
+
     p{
     
         border-bottom: 1px solid grey;
@@ -33,17 +35,44 @@
   .signIN-Conent{
     width: 50%;
     // border: 1px solid green;
+   align-items: center;
+   justify-content: center;
 
+
+   h2{
+    margin-top: 5px;
+   }
     .Avatar-con{
       margin: 0 auto;
     width: 50%;
     max-width: 120px;
     
+    
     .Avatar{ 
       width: 100%;
       height: 100%;
+      
     } 
     }
+
+
+    .error-handlars{
+    
+    
+  
+      padding: 6px 15px;
+    
+      max-width: 130px;
+      background-color: #F00054;
+    
+      // border: 10px solid yellow;
+      border-radius: 10px;
+
+      font-size: .9rem;
+
+ 
+    
+  }
 
 
   }
