--- a/src/Components/Sign-up/signUp.scss
+++ b/src/Components/Sign-up/signUp.scss
@@ -23,7 +23,10 @@
 
         h2,h4{
             margin: 0;
-
+           
+        }
+        h2{
+            margin-top: 5px;
         }
         h4{
             margin-bottom: 15px;
@@ -31,13 +34,32 @@
 
     .signUp-content{
         width: 50%;
+
+
+        .error-handlars{
+    
+    
+  
+            padding: 6px 15px;
+          
+            max-width: 130px;
+            background-color: #F00054;
+          
+            // border: 10px solid yellow;
+            border-radius: 10px;
+      
+            font-size: .9rem;
+            margin-bottom: .3em;
+       
+          
+        }
     }
 
     
     .Avatar-con{
         width: 50%;
         margin: 0 auto;
-     
+        
      
         .Avatar{
             width: 50%;
