--- a/src/Components/Catagory/Catagory.scss
+++ b/src/Components/Catagory/Catagory.scss
@@ -1,12 +1,17 @@
 .catagory-contianer{
     color: white;
     border: 1px solid red;
+  width: 100%;
+    // height: 400px;
+    // display: flex;
+    // flex-wrap: wrap;
+ display: flex;
+ flex-wrap: wrap;
 
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
+     justify-content: space-between;
+     
+
 
 
 
