--- a/src/Components/Main-Section/Main.scss
+++ b/src/Components/Main-Section/Main.scss
@@ -34,7 +34,7 @@
         opacity: 0.888;
         // opacity: 0;
        
-        width: 100vw;
+        width: 100%;
         height: 70vh;
         object-fit: cover;
         object-position: 20%;
