Added items to pc page also made cart Drop Down

--- a/src/Components/Catagories/Catagories.scss
+++ b/src/Components/Catagories/Catagories.scss
@@ -1,5 +1,5 @@
 .catagories-con{
-    border: 1px solid green;
+    // border: 1px solid green;
     min-width: 32.2%;
     // max-width: 400px;
     // font-size: 1rem;
