--- a/src/Components/Catagory/Catagory.scss
+++ b/src/Components/Catagory/Catagory.scss
@@ -1,16 +1,41 @@
 .catagory-contianer{
     color: white;
-    border: 1px solid red;
+    // border: 1px solid red;
   width: 100%;
     // height: 400px;
     // display: flex;
-    // flex-wrap: wrap;
+    // flex-wrap: wrap; 
  display: flex;
  flex-wrap: wrap;
 
     
      justify-content: space-between;
-     
+    
+
+  .Message{
+    position: absolute;
+    z-index: 10;
+    // width: 100%;
+    // margin: 0 auto;
+
+    color: white;
+    background-color: pink;
+    // font-size: 1.2rem;
+    padding: 1px;
+    height: 30px;
+    top: 1;
+    left: 1%;
+    border: none;
+    border-radius: 5px;
+
+    h3{
+      margin: 0;
+
+    }
+ 
+    
+
+  }
 
 
 
